<resources>
    <string name="app_name">PrimerProyecto</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="selecciona_fecha">Selecciona fecha</string>
    <string name="fecha">Fecha</string>
    <string name="notas_guardadas">NOTAS GUARDADAS</string>

</resources>